compiler-core/src/parse/snapshots/rakun_core__parse__tests__type_invalid_constructor.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nrecord A {\n    A(String)\n    type\n}\n"
---
----- SOURCE CODE

record A {
    A(String)
    type
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:4:5
  │
4 │     type
  │     ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
- `}`
- a record constructor
